<resources>
    <string name="app_name">Digit Classification App</string>
    <string name="upload_Btn">Upload image</string>
    <string name="upload_Choose">Chose image</string>
    <string name="Retrieve_images">Show all images</string>
    <string name="choose_image_button_text">Choose Image</string>
    <string name="classify_button_text">Classify</string>
    <string name="image_view_description">Input Image</string>
    <string name="prediction_text_view_text">Prediction:</string>
    <string name="accuracy_text_view_text">Accuracy:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>